--- a/Test/views/knowYourPlace.html
+++ b/Test/views/knowYourPlace.html
@@ -56,11 +56,11 @@
         <header></header>
          <div class="container">
                       <div class="jumbotron">
-         <div ng-controller="insertController">
+         <div ng-controller="KnowYourPlaceController">
         <p><span aria-hidden="true" class="glyphicon text-primary glyphicon-search"></span> Enter details to find your Dream Home!:
         </p>
-            Enter Zip Code: <input type="text" name="login" ng-model="login" value=""/></br>
-            Enter Rent: <input type="text" name="name" ng-model="name" value=""/></br>
+            Enter Zip Code: <input type="text" name="zipcode" ng-model="zipcode" value=""/></br>
+            Enter Food: <input type="text" name="name" ng-model="name" value=""/></br>
             <h3>Select some options that you care about in your neighborhood.</h3>
                <form method="get" action="/person">
                   <p>
@@ -81,7 +81,15 @@
 <!--             Sex: <input type="text" name="sex" ng-model="sex" value=""/></br>
             RelationshipStatus <input type="text" name="RelationshipStatus" ng-model="RelationshipStatus" value=""/></br> 
             Birthyear <input type="text" name="Birthyear" ng-model="Birthyear" value=""/></br> -->
-            <button type="button" ng-click="Insert()" class="button">Go!</button></br>
+            <button type="button" ng-click="knowFriends()" class="button">Go!</button></br>
+            </p>
+        <table border="0" cellpadding="10" cellspacing="1" width="500" align="center"> 
+            <tr> 
+            <td> Categories </td>
+            <tr ng-repeat="x in data"> 
+            <td> {{ x.business_id }} </td>
+            </tr>
+        </table>
         </div>
         </div>
     </body>
