added some more changes for views

--- a/Test/views/findYourPlace.html
+++ b/Test/views/findYourPlace.html
@@ -21,6 +21,9 @@
         }
 
         #sideBar span {
+          max-height: 100%;
+          height: 600px;
+          overflow: auto;
           color: #999;
         }
 
@@ -70,44 +73,46 @@
     <div class="main">
 
       <div id="sideBar" class="pre-scrollable">
+        <div ng-controller="findYourPlaceController">
         <span>
+          <fieldset>
           <p>Ready to find your dream home?</p>
-          <p>Find the best neighborhood for your preferences...</p>
+          <p>Find the best neighborhood for your preferences!</p>
           <button class="collapsible">Food</button>
             <div class="content">
 
             <div>
-                <input type="checkbox" id="delivery" name="delivery">
+                <input type="checkbox" id="delivery" name="preferences[]" value="delivery">
                 <label for="delivery">Delivery</label>
               </div>
 
               <div>
-                <input type="checkbox" id="onedollarsign" name="onedollarsign">
+                <input type="checkbox" id="onedollarsign" name="preferences[]" value="onedollarsign">
                 <label for="onedollarsign">$</label>
               </div>
 
               <div>
-                <input type="checkbox" id="twodollarsigns" name="twodollarsigns">
+                <input type="checkbox" id="twodollarsigns" name="preferences[]" value="twodollarsigns">
                 <label for="twodollarsigns">$$</label>
               </div>
 
               <div>
-                <input type="checkbox" id="threedollarsigns" name="threedollarsigns">
+                <input type="checkbox" id="threedollarsigns" name="preferences[]" value="threedollarsigns">
                 <label for="threedollarsigns">$$$</label>
               </div>
 
               <div>
-                <input type="checkbox" id="weekends" name="weekends">
+                <input type="checkbox" id="weekends" name="preferences[]" value="weekends">
                 <label for="weekends">Open on Weekends</label>
               </div>
 
               <div>
-                <input type="checkbox" id="vegan" name="vegan">
+                <input type="checkbox" id="vegan" name="preferences[]" value="vegan">
                 <label for="vegan">Vegan Options</label>
               </div>
 
               <div>
-                <input type="checkbox" id="vegetarian" name="vegetarian">
+                <input type="checkbox" id="vegetarian" name="preferences[]" value="vegetarian">
                 <label for="vegetarian">Vegetarian Options</label>
               </div>
 
@@ -115,39 +120,57 @@
           <button class="collapsible">Nightlife</button>
             <div class="content">
             <div>
-                <input type="checkbox" id="bars" name="bars">
+                <input type="checkbox" id="bars" name="preferences[]" value="bars">
                 <label for="bars">Bars</label>
               </div>
 
               <div>
-                <input type="checkbox" id="clubs" name="clubs">
+                <input type="checkbox" id="clubs" name="preferences[]" value="clubs">
                 <label for="clubs">Clubs</label>
               </div>
 
               <div>
-                <input type="checkbox" id="casinos" name="casinos">
+                <input type="checkbox" id="casinos" name="preferences[]" value="casinos">
                 <label for="casinos">Casinos</label>
               </div>
 
             </div>
           <button class="collapsible">Coffee and Tea</button>
             <div class="content">
-            <p>Family</p>
+              <div>
+                <input type="checkbox" id="cafes" name="preferences[]" value="cafes">
+                <label for="cafes">Cafes</label>
+              </div>
+
+              <div>
+                <input type="checkbox" id="noise" name="preferences[]" value="noise">
+                <label for="noise">Low Noise Level</label>
+              </div>
             </div>
           <button class="collapsible">Kids and Family</button>
             <div class="content">
-            <p>Family</p>
+              <div>
+                <input type="checkbox" id="childcare" name="preferences[]" value="childcare">
+                <label for="childcare">Childcare</label>
+              </div>
+
+              <div>
+                <input type="checkbox" id="recreation" name="preferences[]" value="recreation">
+                <label for="recreation">Recreation</label>
+              </div>
             </div>
-          <button class="collapsible">Recreation</button>
+          
+          <button class="collapsible">Rent</button>
             <div class="content">
-            <p>Family</p>
+            <p>Rent</p>
             </div>
-          <form>
+          
           <div>
-            <button type="submit">Go!</button>
+            <button type="button" ng-click="Find()" class="button">Go!</button>
            </div>
-          </form>
+          </fieldset>
         </span>
+      </div>
       </div>
 
       <div id="map_wrapper">
