--- a/Test/views/findYourPlace.html
+++ b/Test/views/findYourPlace.html
@@ -85,37 +85,37 @@
             <div class="content">
 
             <div>
-                <input type="checkbox" id="delivery" name="preferences[]" value="delivery">
+                <input type="checkbox" id="preferences" name="preferences[]" value="delivery">
                 <label for="delivery">Delivery</label>
               </div>
 
               <div>
-                <input type="checkbox" id="onedollarsign" name="preferences[]" value="onedollarsign">
+                <input type="checkbox" id="preferences" name="preferences[]" value="onedollarsign">
                 <label for="onedollarsign">$</label>
               </div>
 
               <div>
-                <input type="checkbox" id="twodollarsigns" name="preferences[]" value="twodollarsigns">
+                <input type="checkbox" id="preferences" name="preferences[]" value="twodollarsigns">
                 <label for="twodollarsigns">$$</label>
               </div>
 
               <div>
-                <input type="checkbox" id="threedollarsigns" name="preferences[]" value="threedollarsigns">
+                <input type="checkbox" id="preferences" name="preferences[]" value="threedollarsigns">
                 <label for="threedollarsigns">$$$</label>
               </div>
 
               <div>
-                <input type="checkbox" id="weekends" name="preferences[]" value="weekends">
+                <input type="checkbox" id="preferences" name="preferences[]" value="weekends">
                 <label for="weekends">Open on Weekends</label>
               </div>
 
               <div>
-                <input type="checkbox" id="vegan" name="preferences[]" value="vegan">
+                <input type="checkbox" id="preferences" name="preferences[]" value="vegan">
                 <label for="vegan">Vegan Options</label>
               </div>
 
               <div>
-                <input type="checkbox" id="vegetarian" name="preferences[]" value="vegetarian">
+                <input type="checkbox" id="preferences" name="preferences[]" value="vegetarian">
                 <label for="vegetarian">Vegetarian Options</label>
               </div>
 
@@ -123,17 +123,17 @@
           <button class="collapsible" type="button">Nightlife</button>
             <div class="content">
             <div>
-                <input type="checkbox" id="bars" name="preferences[]" value="bars">
+                <input type="checkbox" id="preferences" name="preferences[]" value="bars">
                 <label for="bars">Bars</label>
               </div>
 
               <div>
-                <input type="checkbox" id="clubs" name="preferences[]" value="clubs">
+                <input type="checkbox" id="preferences" name="preferences[]" value="clubs">
                 <label for="clubs">Clubs</label>
               </div>
 
               <div>
-                <input type="checkbox" id="casinos" name="preferences[]" value="casinos">
+                <input type="checkbox" id="preferences" name="preferences[]" value="casinos">
                 <label for="casinos">Casinos</label>
               </div>
 
@@ -141,24 +141,24 @@
           <button class="collapsible" type="button">Coffee and Tea</button>
             <div class="content">
               <div>
-                <input type="checkbox" id="cafes" name="preferences[]" value="cafes">
+                <input type="checkbox" id="preferences" name="preferences[]" value="cafes">
                 <label for="cafes">Cafes</label>
               </div>
 
               <div>
-                <input type="checkbox" id="noise" name="preferences[]" value="noise">
+                <input type="checkbox" id="preferences" name="preferences[]" value="noise">
                 <label for="noise">Low Noise Level</label>
               </div>
             </div>
           <button class="collapsible" type="button">Kids and Family</button>
             <div class="content">
               <div>
-                <input type="checkbox" id="childcare" name="preferences[]" value="childcare">
+                <input type="checkbox" id="preferences" name="preferences[]" value="childcare">
                 <label for="childcare">Childcare</label>
               </div>
 
               <div>
-                <input type="checkbox" id="recreation" name="preferences[]" value="recreation">
+                <input type="checkbox" id="preferences" name="preferences[]" value="recreation">
                 <label for="recreation">Recreation</label>
               </div>
             </div>
@@ -168,9 +168,9 @@
             <p>Rent</p>
             </div>
           
-          <div>
+          
             <button type="submit" ng-click="Find()" class="button">Go!</button>
-          </div>
+          
 
         
         </span>
