--- a/Test/views/findYourPlace.html
+++ b/Test/views/findYourPlace.html
@@ -3,6 +3,8 @@
 
   <head>
     <title>Find Your Place</title>
+     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.2/angular.js"></script>
+    <script src="javascripts/app.js" type="text/javascript"></script>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
